<resources>
    <string name="app_name">Recipe</string>
    <string name="action_login">Login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="menu">Menu</string>
    <string name="favorite_text">favorite</string>
    <string name="dummy">А это у нас пока, к сожалению, не реализовано</string>
    <string name="all_recipe">ВСЕ РЕЦЕПТЫ</string>
    <string name="favorite_recipe">ИЗБРАННОЕ</string>
    <string name="insert_text">ПОИСК</string>
    <string name="cancel_edit">Отмена</string>
    <string name="save_edit">Сохранить</string>
    <string name="hint_recipe_name">Название</string>
    <string name="hint_recipe_author">Автор</string>
    <string name="hint_recipe_description">Описание</string>
    <string name="add_new_step">Новый шаг</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox_value">Здесь будет параметр</string>
    <string name="category_checkbox_name">Категория</string>
    <!-- EUROPEAN, ASIAN, PAN_ASIAN, EASTERN, AMERICAN, RUSSIAN, MEDITERRANEAN, OTHER -->
    <string name="category_checkbox_AMERICAN">Америанская</string>
    <string name="category_checkbox_ASIAN">Азиатская</string>
    <string name="category_checkbox_EASTERN">Восточная</string>
    <string name="category_checkbox_EUROPEAN">Европейская</string>
    <string name="category_checkbox_MEDITERRANEAN">Средиземноморская</string>
    <string name="category_checkbox_PAN_ASIAN">Паназиатская</string>
    <string name="category_checkbox_RUSSIAN">Русская</string>
    <string name="category_checkbox_OTHER">Другая</string>
    <string name="edit_recipe">Редактировать</string>
    <string name="delete_recipe">Удалить</string>
    <string name="add_recipe_string_res">Новый рецепт</string>
    <string name="filter_menu_top_string">Фильтр</string>
    <string name="add_menu_top_string">Новый рецепт</string>
    <string name="add_step_recipe">Добавить шаг</string>
    <string name="toast_empty_recipe">Нельзя сохранять пустой рецепт</string>
    <string name="toast_save_recipe">Сохранилось</string>

    <string-array name="category_spinner">
        <item>Европейская</item>
        <item>Азиатская</item>
        <item>Паназиатская</item>
        <item>Восточная</item>
        <item>Американская</item>
        <item>Русская</item>
        <item>Средиземноморская</item>
        <item>Другая</item>
    </string-array>

</resources>