<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRecipeFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/food_vegetables"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar_edit_recipe"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expand_add_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/common_spacing_24dp"
        android:layout_marginEnd="@dimen/common_spacing_24dp"
        android:src="@drawable/ic_baseline_step_add_24dp"
        android:contentDescription="@string/add_new_step"
        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <ScrollView
        android:id="@+id/scrollable_edit_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editable_field_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_fab_vertical_96dp"
            android:layout_marginTop="@dimen/margin_fab_vertical_96dp"
            >

            <EditText
                android:id="@+id/edit_author_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_common_spacing_8dp"
                android:layout_marginEnd="@dimen/margin_common_spacing_8dp"
                android:singleLine="false"
                android:textSize="@dimen/text_middle_spacing_16sp"
                android:background="@color/light_gray_pink"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/hint_recipe_author"
                android:gravity="center"
                android:minHeight="@dimen/image_button_spacing_48dp"
                />

            <EditText
                android:id="@+id/edit_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_common_spacing_8dp"
                android:layout_marginEnd="@dimen/margin_common_spacing_8dp"
                android:layout_marginTop="@dimen/margin_common_spacing_8dp"
                android:singleLine="false"
                android:textSize="@dimen/text_middle_spacing_16sp"
                android:background="@color/light_gray_pink"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/edit_author_text"
                android:hint="@string/hint_recipe_name"
                android:gravity="center"
                android:minHeight="@dimen/margin_fab_vertical_96dp"
                />


            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/edit_fragment_steps_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_recipe_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_common_spacing_8dp"
                android:minHeight="@dimen/recipe_card_height_240dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeStepsRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="visible"
                    >

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>