<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fab_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_filter_alt_48dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="@dimen/margin_fab_vertical_short_60dp"
        android:layout_marginEnd="@dimen/margin_common_spacing_8dp"
        android:clickable="true"
        android:focusable="true"
        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_add_48dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/margin_common_spacing_8dp"
        android:layout_marginBottom="@dimen/margin_fab_vertical_short_60dp"
        android:focusable="true"
        android:clickable="true"
        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:minHeight="@dimen/recipe_card_height_240dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/vegetables"
            >
        </androidx.appcompat.widget.AppCompatImageView>




        <com.google.android.material.tabs.TabLayout
            android:id="@+id/favorite_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/recipeRecyclerView"
            >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_recipe_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_recipe"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/favorite_recipe_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_recipe"
                />

        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/favorite_tab_bar"
            android:background="@android:color/transparent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>



        <androidx.cardview.widget.CardView
            android:id="@+id/main_search_card_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/common_spacing_24dp"
            android:layout_marginEnd="@dimen/margin_common_spacing_8dp"
            android:layout_marginStart="@dimen/margin_common_spacing_8dp"
            app:cardCornerRadius="@dimen/corner_common_spacing_12dp"
            android:background="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/main_search_card_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/insert_text"
                    app:layout_constraintEnd_toStartOf="@id/cancel_search_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:singleLine="true"
                    >
                </androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/cancel_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_baseline_cancel_24dp"
                    android:background="@color/white"
                    app:layout_constraintStart_toEndOf="@id/main_search_card_text"
                    android:visibility="gone"
                    tools:visibility="visible"
                    >
                </androidx.appcompat.widget.AppCompatImageButton>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

